javascript file added

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -14,8 +14,8 @@
         <h1>Counter</h1>
         <p class="count">0</p>
         <div class="counters">
-            <button class="dec">Decrease</button>
-            <button class="inc">Increase</button>
+            <button class="btn dec">Decrease</button>
+            <button class="btn inc">Increase</button>
         </div>
     </div>
     <script src="index.js"></script>
