--- a/Project-5/index.html
+++ b/Project-5/index.html
@@ -34,6 +34,14 @@
         </div>
     </div>
 
+    <div class="slider">
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+        integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="index.js"></script>
 
 </body>
