--- a/Project-6/index.html
+++ b/Project-6/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-6</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,6 +19,7 @@
         <h1>Developer Pani</h1>
     </div>
 
+    <script src="index.js"></script>
 </body>
 
 </html>
