--- a/Project-02/index.html
+++ b/Project-02/index.html
@@ -5,19 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-2</title>
+    <title>Random Colors</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1>A Message You Would Like To Pass</h1>
-        <input type="text" value="">
-        <div class="btn">Submit</div>
-        <p class="error">Please enter a value to pass</p>
-        <h3>Last Message Delivered...!</h3>
-        <p class="message"></p>
-    </div>
+    <button class="btn">Button</button>
     <script src="index.js"></script>
 </body>
 
