added reset button

--- a/Project-03/index.html
+++ b/Project-03/index.html
@@ -17,6 +17,7 @@
             <button class="btn dec">Decrease</button>
             <button class="btn inc">Increase</button>
         </div>
+        <button class="reset">Reset</button>
     </div>
     <script src="index.js"></script>
 </body>
