project numbers changed

--- a/Project-07/index.html
+++ b/Project-07/index.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Joke Generator</title>
+    <title>Country Guide</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <div class="container">
-        <h1>Random Joke Generator</h1>
-        <img src="emoji.png" alt="">
-        <p class="joke">Click on the "GENERATE" to get the Joke.</p>
-        <button class="btn">Generate</button>
+        <h1>Country Guide</h1>
+        <div class="search-container">
+            <input type="text" id="search" placeholder="Enter a country name to get the details...">
+            <button>Submit</button>
+        </div>
     </div>
 
-    <script src="index.js"></script>
 </body>
 
 </html>
