--- a/Project-09/index.html
+++ b/Project-09/index.html
@@ -5,24 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List App</title>
+    <title>Stop Watch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="title">TO-DO List<img src="images/icon.png" alt=""></div>
-        <div class="todo-list-bar">
-            <input type="text" id="task" placeholder="Enter the task..." utocomplete="off">
-            <button onclick="clicked()" class="addBtn">Add</button>
+    <div class="stopWatch">
+        <h1 class="time">00:00:00</h1>
+        <div class="controls">
+            <img src="images/stop.png" onclick="stopTimer()" alt="stop">
+            <img src="images/start.png" onclick="startTimer()" alt="start">
+            <img src="images/reset.png" onclick="resetTimer()" alt="reset">
         </div>
-        <ul class="lists">
-        </ul>
     </div>
 
     <script src="index.js"></script>
-
 </body>
 
 </html>
