--- a/Project-06/index.html
+++ b/Project-06/index.html
@@ -5,18 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-6</title>
+    <title>Random Joke Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div class="cursor">
-
-    </div>
-
-    <div class="context">
-        <h1>Developer Pani</h1>
+    <div class="container">
+        <h1>Random Joke Generator</h1>
+        <img src="emoji.png" alt="">
+        <p class="joke">Click on the "GENERATE" to get the Joke.</p>
+        <button class="btn">Generate</button>
     </div>
 
     <script src="index.js"></script>
