--- a/Project-06/index.html
+++ b/Project-06/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Random Joke Generator</h1>
         <img src="emoji.png" alt="">
-        <p class="joke">Click on the "GENERATE" to get the Joke.</p>
+        <p class="joke fade">Click on the "GENERATE" to get the Joke.</p>
         <button class="btn">Generate</button>
     </div>
 
