--- a/Project-07/index.html
+++ b/Project-07/index.html
@@ -14,11 +14,12 @@
     <div class="container">
         <h1>Country Guide</h1>
         <div class="search-container">
-            <input type="text" id="search" placeholder="Enter a country name to get the details...">
-            <button>Submit</button>
+            <input type="text" id="country-name" placeholder="Enter a country name to get the details...">
+            <button class="searchBtn">Search</button>
         </div>
+        <div class="result"> </div>
     </div>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
