--- a/Project-10/index.html
+++ b/Project-10/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <!-- The below images links are from picsum website -->
+
     <div class="image-container">
         <span style="--i: 1">
             <img src="https://picsum.photos/id/237/300/200">
