images links are removed and added jpg files

--- a/Project-20/index.html
+++ b/Project-20/index.html
@@ -15,21 +15,18 @@
         <h1>Rock, Paper & Scissor Game</h1>
         <h2>Pick your choice</h2>
         <div class="choices">
-            <img src="https://media.istockphoto.com/id/946132558/photo/rock-isolated-on-white-background.jpg?b=1&s=170667a&w=0&k=20&c=zs-m7yWaI6quGw31rhF_-DcY7aesyzKPzbahNsDLwbM="
-                alt="rock">
-            <img src="https://media.istockphoto.com/id/672298630/photo/white-wrinkle-paper-texture-background.jpg?b=1&s=170667a&w=0&k=20&c=VanjRTDnRZKLaFd4gjQjWbxp_1FGd-GnDbuy_0rXh6I="
-                alt="paper">
-            <img src="https://media.istockphoto.com/id/1030837954/photo/closed-scissors-on-white.jpg?b=1&s=170667a&w=0&k=20&c=kGv9vuZmjopt2BoHKvbP-PnLrRREloGbzXHSyeOQ8SM="
-                alt="scissor">
+            <img src="images/rock.jpg" alt="rock" id="rock">
+            <img src="images/paper.jpg" alt="paper" id="paper">
+            <img src="images/scissor.jpg" alt="scissor" id="scissor">
         </div>
         <div class="both-choices">
-            <h3>User Choice : <span class="user-choice">rock</span></h3>
-            <h3>Computer Choice : <span class="computer-choice">paper</span></h3>
+            <h3>User Choice : <span class="user-choice">NA</span></h3>
+            <h3>Computer Choice : <span class="computer-choice">NA</span></h3>
         </div>
-        <p class="result">You win..!</p>
+        <p class="result">Results will appear here...</p>
         <div class="points">
-            <h4>User Points : <span class="user-points">0</span></h4>
-            <h4>Computer Points : <span class="computer-points">0</span></h4>
+            <h3>User Points : <span class="user-points">0</span></h3>
+            <h3>Computer Points : <span class="computer-points">0</span></h3>
         </div>
     </div>
 
