html code is completed

--- a/Project-23/index.html
+++ b/Project-23/index.html
@@ -11,13 +11,14 @@
 
 <body>
 
-    <div class="container">
+    <div class="wrapper">
         <h1>Dice Roll Simulator</h1>
         <div class="dice">&#9860;</div>
-        <div class="dice">&#9860;</div>
+        <button class="rollButton">Roll</button>
+        <ul class="rollHistory"> </ul>
     </div>
 
-    <script src=""></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
