--- a/Project-26/index.html
+++ b/Project-26/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clock</title>
+    <title>Clock (Analog + Digital)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -39,7 +39,18 @@
             <div class="time"></div>
             <div class="ampm"></div>
         </div>
+
     </div>
+
+    <div class="colors">
+        <div class="color redC"></div>
+        <div class="color grayC"></div>
+        <div class="color slateblueC"></div>
+        <div class="color greenC"></div>
+        <div class="color blackC"></div>
+        <div class="color blueC"></div>
+    </div>
+
     <script src="index.js"></script>
 </body>
 
