html code is completed

--- a/Project-32/index.html
+++ b/Project-32/index.html
@@ -5,12 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Drink Water</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="heading">
+            <h1>Drink Water</h1>
+            <h3>Our Goal: 4 Liters</h3>
+        </div>
+        <div class="box">
+            <div class="small-glasses">
+                <p class="text">Choose total number of glasses of water that you have drank today</p>
 
+                <div class="glasses">
+                    <div class="glass small-glass">500 ml</div>
+                    <div class="glass small-glass">500 ml</div>
+                    <div class="glass small-glass">500 ml</div>
+                    <div class="glass small-glass">500 ml</div>
+                    <div class="glass small-glass">500 ml</div>
+                    <div class="glass small-glass">500 ml</div>
+                    <div class="glass small-glass">500 ml</div>
+                    <div class="glass small-glass">500 ml</div>
+                </div>
+            </div>
+            <div class="big-glass">
+                <div class="remaining">
+                    <span class="liters"></span>
+                    <span class="rem">Remaining</span>
+                </div>
+
+                <div class="percentage"></div>
+            </div>
+
+        </div>
+    </div>
 
     <script src="index.js"></script>
 </body>
