html code is completed

--- a/Project-34/index.html
+++ b/Project-34/index.html
@@ -17,8 +17,7 @@
 
     <div class="container">
         <div class="image">
-            <img src="https://images.pexels.com/photos/624015/pexels-photo-624015.jpeg?auto=compress&cs=tinysrgb&w=600"
-                alt="iceland">
+            <img src="panda.jpg" alt="iceland">
         </div>
         <div class="filters">
             <div class="filter">
@@ -50,7 +49,7 @@
                 <div class="input">
                     <input type="range" min="0" max="200" id="contrast" value="18"
                         oninput="this.nextElementSibling.value = this.value">
-                    <output>18</output>
+                    <output>100</output>
                 </div>
             </div>
         </div>
