removed placeholder value

--- a/Project-41/index.html
+++ b/Project-41/index.html
@@ -16,7 +16,7 @@
     <h1>Random Password Generator</h1>
     <div class="container">
         <div class="inputContainer">
-            <input type="text" placeholder="@deve\0Perp@n!" disabled>
+            <input type="text" disabled>
             <i class="fa-solid fa-clipboard"></i>
         </div>
         <div class="rangeContainer">
