--- a/Project-08/index.html
+++ b/Project-08/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <div class="title">TO-DO List<img src="images/icon.png" alt=""></div>
+        <div class="title">Get Things Done..<img src="images/icon.png" alt=""></div>
         <div class="todo-list-bar">
             <input type="text" id="task" placeholder="Enter the task..." autocomplete="off">
             <button onclick="clicked()" class="addBtn">Add</button>
