--- a/Project-33/index.html
+++ b/Project-33/index.html
@@ -5,47 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catch the Insect Game</title>
+    <title>Catch the Fruits</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Catch The Insect</h1>
+        <h1>Catch The Fruits</h1>
         <button class="playBtn">Play Game</button>
     </div>
 
     <div class="container">
-        <h1>Select your favorite insect</h1>
-        <ul class="insectList">
+        <h1>Select your favorite Fruit</h1>
+        <ul class="fruitList">
             <li>
-                <button class="insectBtn">
-                    <img src="https://pngimg.com/uploads/butterfly/small/butterfly_PNG103828.png" alt="spider" />
-                    <p>Butterfly</p>
+                <button class="fruitBtn">
+                    <img src="https://pngimg.com/uploads/banana/small/banana_PNG104249.png" alt="banana" />
+                    <p>Banana</p>
                 </button>
             </li>
             <li>
-                <button class="insectBtn">
-                    <img src="https://pngimg.com/uploads/grasshopper/small/grasshopper_PNG4.png" alt="roach" />
+                <button class="fruitBtn">
+                    <img src="https://pngimg.com/uploads/apple/small/apple_PNG12497.png" alt="apple" />
                     <p>Grasshopper</p>
                 </button>
             </li>
             <li>
-                <button class="insectBtn">
-                    <img src="https://pngimg.com/uploads/ant/small/ant_PNG19340.png" alt="fly">
-                    <p>Ant</p>
+                <button class="fruitBtn">
+                    <img src="https://pngimg.com/uploads/orange/small/orange_PNG805.png" alt="orange">
+                    <p>Orange</p>
                 </button>
             </li>
             <li>
-                <button class="insectBtn">
-                    <img src="http://pngimg.com/uploads/mosquito/mosquito_PNG18175.png" alt="mosquito" />
-                    <p>Mosquito</p>
+                <button class="fruitBtn">
+                    <img src="https://pngimg.com/uploads/mango/small/mango_PNG9163.png" alt="mango" />
+                    <p>Mango</p>
                 </button>
             </li>
             <li>
-                <button class="insectBtn">
-                    <img src="https://pngimg.com/uploads/dragonfly/small/dragonfly_PNG2.png" alt="mosquito" />
-                    <p>Dragonfly</p>
+                <button class="fruitBtn">
+                    <img src="https://pngimg.com/uploads/strawberry/small/strawberry_PNG2623.png" />
+                    <p>Strawberry</p>
                 </button>
             </li>
         </ul>
